correccion en proyecto.html

--- a/proyecto.html
+++ b/proyecto.html
@@ -127,7 +127,7 @@
         </article>
 
         <article class="card">
-          <a href="series/breakingbad.html">
+          <a href="breakingbad.html">
             <figure>
               <img src="https://i.pinimg.com/564x/61/75/4d/61754da3d90010fe1e21a8bea77657b0.jpg" alt="Breaking Bad">
             </figure>
